# parametrics

./: Cargo.toml  README.md
src/: bezier.rs  circle.rs  core.rs  lib.rs  segment.rs
