[package]
name = "parametrics"
description = "A crate for working with parametric functions"
version = "1.2.1"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/josh-gree/parametrics/"
keywords = ["geometry", "2D"]
authors = ["josh-gree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.9"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
